Detect and merge common tails
* src/pf/optimize.lua (simplify_if): Handle more cases.  Detect and
  merge common tails.  (This might not be a good idea, as it decreases
  precision of flow analysis; dunno.)

* doc/host-127.0.0.1.md:
* doc/net-127.0.0.0-8.md: Regenerate.

--- a/doc/net-127.0.0.0-8.md
+++ b/doc/net-127.0.0.0-8.md
@@ -85,7 +85,11 @@ return function(P,length)
       do
          if not (length >= 42) then return false end
          do
-            if not (v1 == 1544) then goto L7 end
+            if v1 == 1544 then goto L6 end
+            do
+               if not (v1 == 13696) then return false end
+            end
+::L6::
             do
                local v6 = ffi.cast("uint32_t*", P+28)[0]
                local v7 = bit.band(v6,255)
@@ -94,20 +98,6 @@ return function(P,length)
                   local v8 = ffi.cast("uint32_t*", P+38)[0]
                   local v9 = bit.band(v8,255)
                   do return v9 == 127 end
-               end
-            end
-::L7::
-            do
-               if not (v1 == 13696) then return false end
-               do
-                  local v10 = ffi.cast("uint32_t*", P+28)[0]
-                  local v11 = bit.band(v10,255)
-                  if v11 == 127 then return true end
-                  do
-                     local v12 = ffi.cast("uint32_t*", P+38)[0]
-                     local v13 = bit.band(v12,255)
-                     do return v13 == 127 end
-                  end
                end
             end
          end
