Update old doc examples
- Statement "return false" is now wrapped as "do return false end".

--- a/doc/net-127.0.0.0-8.md
+++ b/doc/net-127.0.0.0-8.md
@@ -67,14 +67,14 @@ end
 
 ```
 return function(P,length)
-   if not (length >= 34) then return false end
+   if not (length >= 34) then do return false end end
    do
       local v1 = ffi.cast("uint16_t*", P+12)[0]
       if not (v1 == 8) then goto L3 end
       do
          local v2 = ffi.cast("uint32_t*", P+26)[0]
          local v3 = bit.band(v2,255)
-         if v3 == 127 then return true end
+         if v3 == 127 then do return true end end
          do
             local v4 = ffi.cast("uint32_t*", P+30)[0]
             local v5 = bit.band(v4,255)
@@ -83,17 +83,17 @@ return function(P,length)
       end
 ::L3::
       do
-         if not (length >= 42) then return false end
+         if not (length >= 42) then do return false end end
          do
             if v1 == 1544 then goto L6 end
             do
-               if not (v1 == 13696) then return false end
+               if not (v1 == 13696) then do return false end end
             end
 ::L6::
             do
                local v6 = ffi.cast("uint32_t*", P+28)[0]
                local v7 = bit.band(v6,255)
-               if v7 == 127 then return true end
+               if v7 == 127 then do return true end end
                do
                   local v8 = ffi.cast("uint32_t*", P+38)[0]
                   local v9 = bit.band(v8,255)
