Update documentation examples

--- a/doc/l1.md
+++ b/doc/l1.md
@@ -54,6 +54,9 @@ end
 ## Direct pflang compilation
 
 ```
+local rshift = require("bit").rshift
+local bswap = require("bit").bswap
+local cast = require("ffi").cast
 return function(P,length)
    if length < 22 then return false end
    if rshift(bswap(cast("uint16_t*", P+12)[0]), 16) > 1500 then return false end
