--- a/doc/net-127.0.0.0-8.md
+++ b/doc/net-127.0.0.0-8.md
@@ -66,6 +66,8 @@ end
 ## Direct pflang compilation
 
 ```
+local band = require("bit").band
+local cast = require("ffi").cast
 return function(P,length)
    if length < 34 then return false end
    local var1 = cast("uint16_t*", P+12)[0]
