--- a/doc/l1.md
+++ b/doc/l1.md
@@ -26,16 +26,16 @@
 ```
 return function (P, length)
    local A = 0
-   if 14 > length then return 0 end
+   if 14 > length then return false end
    A = bit.bor(bit.lshift(P[12], 8), P[12+1])
    if (runtime_u32(A)>1500) then goto L12 end
-   if 16 > length then return 0 end
+   if 16 > length then return false end
    A = bit.bor(bit.lshift(P[14], 8), P[14+1])
    if not (A==65278) then goto L12 end
-   if 18 > length then return 0 end
+   if 18 > length then return false end
    A = P[17]
    if not (A==131) then goto L12 end
-   if 22 > length then return 0 end
+   if 22 > length then return false end
    A = P[21]
    if (A==26) then goto L11 end
    if (A==24) then goto L11 end
@@ -43,9 +43,9 @@ return function (P, length)
    if (A==15) then goto L11 end
    if not (A==17) then goto L12 end
    ::L11::
-   do return 65535 end
+   do return true end
    ::L12::
-   do return 0 end
+   do return false end
    error("end of bpf")
 end
 ```
