Renumber ANF-generated vars for readability
* src/pf/anf.lua: Renumber vars before lowering to CPS, for better
  readability.

--- a/doc/l1.md
+++ b/doc/l1.md
@@ -62,12 +62,12 @@ return function(P,length)
    if rshift(bswap(cast("uint16_t*", P+12)[0]), 16) > 1500 then return false end
    if cast("uint16_t*", P+14)[0] ~= 65278 then return false end
    if P[17] ~= 131 then return false end
-   local var5 = P[21]
-   if var5 == 15 then return true end
-   if var5 == 18 then return true end
-   if var5 == 24 then return true end
-   if var5 == 26 then return true end
-   return var5 == 17
+   local v1 = P[21]
+   if v1 == 15 then return true end
+   if v1 == 18 then return true end
+   if v1 == 24 then return true end
+   if v1 == 26 then return true end
+   return v1 == 17
 end
 
 ```
