--- a/doc/net-127.0.0.0-8.md
+++ b/doc/net-127.0.0.0-8.md
@@ -70,15 +70,15 @@ local band = require("bit").band
 local cast = require("ffi").cast
 return function(P,length)
    if length < 34 then return false end
-   local var1 = cast("uint16_t*", P+12)[0]
-   if var1 == 8 then
+   local v1 = cast("uint16_t*", P+12)[0]
+   if v1 == 8 then
       if band(cast("uint32_t*", P+26)[0],255) == 127 then return true end
       return band(cast("uint32_t*", P+30)[0],255) == 127
    else
       if length < 42 then return false end
-      if var1 == 1544 then goto L12 end
+      if v1 == 1544 then goto L12 end
       do
-         if var1 == 13696 then goto L12 end
+         if v1 == 13696 then goto L12 end
          return false
       end
 ::L12::
