Update example filters with assembly outputs

--- a/doc/l1.md
+++ b/doc/l1.md
@@ -72,3 +72,41 @@ end
 
 ```
 
+## Native pflang compilation
+
+```
+7fbe1e3d2000  4883FE16          cmp rsi, +0x16
+7fbe1e3d2004  0F8C59000000      jl 0x7fbe1e3d2063
+7fbe1e3d200a  0FB7770C          movzx esi, word [rdi+0xc]
+7fbe1e3d200e  66C1CE08          ror si, 0x08
+7fbe1e3d2012  480FB7F6          movzx rsi, si
+7fbe1e3d2016  4881FEDC050000    cmp rsi, 0x5dc
+7fbe1e3d201d  7F44              jg 0x7fbe1e3d2063
+7fbe1e3d201f  0FB7770E          movzx esi, word [rdi+0xe]
+7fbe1e3d2023  4881FEFEFE0000    cmp rsi, 0xfefe
+7fbe1e3d202a  7537              jnz 0x7fbe1e3d2063
+7fbe1e3d202c  0FB67711          movzx esi, byte [rdi+0x11]
+7fbe1e3d2030  4881FE83000000    cmp rsi, 0x83
+7fbe1e3d2037  752A              jnz 0x7fbe1e3d2063
+7fbe1e3d2039  0FB67715          movzx esi, byte [rdi+0x15]
+7fbe1e3d203d  4883FE0F          cmp rsi, +0x0f
+7fbe1e3d2041  7502              jnz 0x7fbe1e3d2045
+7fbe1e3d2043  EB21              jmp 0x7fbe1e3d2066
+7fbe1e3d2045  4883FE12          cmp rsi, +0x12
+7fbe1e3d2049  7502              jnz 0x7fbe1e3d204d
+7fbe1e3d204b  EB19              jmp 0x7fbe1e3d2066
+7fbe1e3d204d  4883FE18          cmp rsi, +0x18
+7fbe1e3d2051  7502              jnz 0x7fbe1e3d2055
+7fbe1e3d2053  EB11              jmp 0x7fbe1e3d2066
+7fbe1e3d2055  4883FE1A          cmp rsi, +0x1a
+7fbe1e3d2059  7502              jnz 0x7fbe1e3d205d
+7fbe1e3d205b  EB09              jmp 0x7fbe1e3d2066
+7fbe1e3d205d  4883FE11          cmp rsi, +0x11
+7fbe1e3d2061  7403              jz 0x7fbe1e3d2066
+7fbe1e3d2063  B000              mov al, 0x0
+7fbe1e3d2065  C3                ret
+7fbe1e3d2066  B001              mov al, 0x1
+7fbe1e3d2068  C3                ret
+
+```
+
