--- a/doc/net-127.0.0.0-8.md
+++ b/doc/net-127.0.0.0-8.md
@@ -92,40 +92,38 @@ end
 ## Native pflang compilation
 
 ```
-7fe899caf000  4883FE22          cmp rsi, +0x22
-7fe899caf004  0F8C68000000      jl 0x7fe899caf072
-7fe899caf00a  0FB7470C          movzx eax, word [rdi+0xc]
-7fe899caf00e  4883F808          cmp rax, +0x08
-7fe899caf012  7524              jnz 0x7fe899caf038
-7fe899caf014  8B4F1A            mov ecx, [rdi+0x1a]
-7fe899caf017  4881E1FF000000    and rcx, 0xff
-7fe899caf01e  4883F97F          cmp rcx, +0x7f
-7fe899caf022  7502              jnz 0x7fe899caf026
-7fe899caf024  EB4F              jmp 0x7fe899caf075
-7fe899caf026  8B4F1E            mov ecx, [rdi+0x1e]
-7fe899caf029  4881E1FF000000    and rcx, 0xff
-7fe899caf030  4883F97F          cmp rcx, +0x7f
-7fe899caf034  743F              jz 0x7fe899caf075
-7fe899caf036  EB3A              jmp 0x7fe899caf072
-7fe899caf038  4883FE2A          cmp rsi, +0x2a
-7fe899caf03c  7C34              jl 0x7fe899caf072
-7fe899caf03e  4881F808060000    cmp rax, 0x608
-7fe899caf045  7409              jz 0x7fe899caf050
-7fe899caf047  4881F880350000    cmp rax, 0x3580
-7fe899caf04e  7522              jnz 0x7fe899caf072
-7fe899caf050  8B471C            mov eax, [rdi+0x1c]
-7fe899caf053  4881E0FF000000    and rax, 0xff
-7fe899caf05a  4883F87F          cmp rax, +0x7f
-7fe899caf05e  7502              jnz 0x7fe899caf062
-7fe899caf060  EB13              jmp 0x7fe899caf075
-7fe899caf062  8B4726            mov eax, [rdi+0x26]
-7fe899caf065  4881E0FF000000    and rax, 0xff
-7fe899caf06c  4883F87F          cmp rax, +0x7f
-7fe899caf070  7403              jz 0x7fe899caf075
-7fe899caf072  B000              mov al, 0x0
-7fe899caf074  C3                ret
-7fe899caf075  B001              mov al, 0x1
-7fe899caf077  C3                ret
+7fa5ddcb5000  4883FE22          cmp rsi, +0x22
+7fa5ddcb5004  0F8C64000000      jl 0x7fa5ddcb506e
+7fa5ddcb500a  0FB7470C          movzx eax, word [rdi+0xc]
+7fa5ddcb500e  4883F808          cmp rax, +0x08
+7fa5ddcb5012  7522              jnz 0x7fa5ddcb5036
+7fa5ddcb5014  8B4F1A            mov ecx, [rdi+0x1a]
+7fa5ddcb5017  4881E1FF000000    and rcx, 0xff
+7fa5ddcb501e  4883F97F          cmp rcx, +0x7f
+7fa5ddcb5022  744D              jz 0x7fa5ddcb5071
+7fa5ddcb5024  8B4F1E            mov ecx, [rdi+0x1e]
+7fa5ddcb5027  4881E1FF000000    and rcx, 0xff
+7fa5ddcb502e  4883F97F          cmp rcx, +0x7f
+7fa5ddcb5032  743D              jz 0x7fa5ddcb5071
+7fa5ddcb5034  EB38              jmp 0x7fa5ddcb506e
+7fa5ddcb5036  4883FE2A          cmp rsi, +0x2a
+7fa5ddcb503a  7C32              jl 0x7fa5ddcb506e
+7fa5ddcb503c  4881F808060000    cmp rax, 0x608
+7fa5ddcb5043  7409              jz 0x7fa5ddcb504e
+7fa5ddcb5045  4881F880350000    cmp rax, 0x3580
+7fa5ddcb504c  7520              jnz 0x7fa5ddcb506e
+7fa5ddcb504e  8B471C            mov eax, [rdi+0x1c]
+7fa5ddcb5051  4881E0FF000000    and rax, 0xff
+7fa5ddcb5058  4883F87F          cmp rax, +0x7f
+7fa5ddcb505c  7413              jz 0x7fa5ddcb5071
+7fa5ddcb505e  8B4726            mov eax, [rdi+0x26]
+7fa5ddcb5061  4881E0FF000000    and rax, 0xff
+7fa5ddcb5068  4883F87F          cmp rax, +0x7f
+7fa5ddcb506c  7403              jz 0x7fa5ddcb5071
+7fa5ddcb506e  B000              mov al, 0x0
+7fa5ddcb5070  C3                ret
+7fa5ddcb5071  B001              mov al, 0x1
+7fa5ddcb5073  C3                ret
 
 ```
 
