Add a native pflua backend using dynasm
The new backend is used by passing { native = true } as an
option to pf.compile_filter.

It currently supports x64 with a unix ABI.

This commit has been squashed from the full history, which is
available in this branch:

  https://github.com/takikawa/pflua/tree/dynasm-backend

--- a/doc/l1.md
+++ b/doc/l1.md
@@ -72,3 +72,37 @@ end
 
 ```
 
+## Native pflang compilation
+
+```
+7fd7e3943000  4883FE16          cmp rsi, +0x16
+7fd7e3943004  7C51              jl 0x7fd7e3943057
+7fd7e3943006  0FB7770C          movzx esi, word [rdi+0xc]
+7fd7e394300a  66C1CE08          ror si, 0x08
+7fd7e394300e  480FB7F6          movzx rsi, si
+7fd7e3943012  4881FEDC050000    cmp rsi, 0x5dc
+7fd7e3943019  7F3C              jg 0x7fd7e3943057
+7fd7e394301b  0FB7770E          movzx esi, word [rdi+0xe]
+7fd7e394301f  4881FEFEFE0000    cmp rsi, 0xfefe
+7fd7e3943026  752F              jnz 0x7fd7e3943057
+7fd7e3943028  0FB67711          movzx esi, byte [rdi+0x11]
+7fd7e394302c  4881FE83000000    cmp rsi, 0x83
+7fd7e3943033  7522              jnz 0x7fd7e3943057
+7fd7e3943035  0FB67715          movzx esi, byte [rdi+0x15]
+7fd7e3943039  4883FE0F          cmp rsi, +0x0f
+7fd7e394303d  741B              jz 0x7fd7e394305a
+7fd7e394303f  4883FE12          cmp rsi, +0x12
+7fd7e3943043  7415              jz 0x7fd7e394305a
+7fd7e3943045  4883FE18          cmp rsi, +0x18
+7fd7e3943049  740F              jz 0x7fd7e394305a
+7fd7e394304b  4883FE1A          cmp rsi, +0x1a
+7fd7e394304f  7409              jz 0x7fd7e394305a
+7fd7e3943051  4883FE11          cmp rsi, +0x11
+7fd7e3943055  7403              jz 0x7fd7e394305a
+7fd7e3943057  B000              mov al, 0x0
+7fd7e3943059  C3                ret
+7fd7e394305a  B001              mov al, 0x1
+7fd7e394305c  C3                ret
+
+```
+
